播放界面及播放功能的实现

--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "pages": [
+    "pages/music/music",
     "pages/index/index",
-    "pages/secondPage/recommend",
-    "pages/music/music"
+    "pages/secondPage/recommend"
   ],
   "window": {
     "backgroundTextStyle": "light",
